--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <div class="box">
                     <div class="innerbox"></div>
                     <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
+                    <p>Lorem ipsum </p>
                 </div>
 
                 <div class="box">
@@ -38,7 +37,7 @@
                 </div>
                 <div class="box">
                     <div class="innerbox"></div>
-                    <h3>Project Name</h3>
+                    <h3>Priya name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
