--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <title>Page Title</title>
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <body>
 
@@ -17,61 +19,72 @@
             <hr>
             <div class="gridcontainer">
                 <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
 
                 <div class="box">
-                    <div class="innerbox"></div>
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum </p>
-                </div>
-
-                <div class="box">
-                    <div class="innerbox"></div>
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-                <div class="box">
-                    <div class="innerbox"></div>
-                    <h3>Priya name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
 
                 <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
 
                 <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
 
                 <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
                 </div>
 
                 <div class="box">
-                    <div class="innerbox"></div>
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
+                        ratione reiciendis?</p>
+                </div>
+
+                <div class="box">
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
+                        ratione reiciendis?</p>
+                </div>
+
+                <div class="box">
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
+                    <h3>Project Name</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
+                        ratione reiciendis?</p>
+                </div>
+
+                <div class="box">
+                    <img src="https://via.placeholder.com/350x200.png" alt="">
+                    <!-- <div class="innerbox"></div> -->
                     <h3>Project Name</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
                         ratione reiciendis?</p>
@@ -82,4 +95,4 @@
 
 </body>
 
-</html> 
+</html>
