--- a/index.html
+++ b/index.html
@@ -1,98 +1,95 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="style.css">
+<html lang="en">
 
 <head>
-    <title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
 <body>
+    <div class="container">
+        <div class="header">
+            <h1>Page Heading <small>Secondary Test</small></h1>
 
-    <center>
-        <div class="container">
-            <div class="txt">
-                <p class="head">Page Heading</p>
-                <p>Secondary text</p>
-            </div>
-            <hr>
-            <div class="gridcontainer">
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-
-                <div class="box">
-                    <img src="https://via.placeholder.com/350x200.png" alt="">
-                    <!-- <div class="innerbox"></div> -->
-                    <h3>Project Name</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi magnam omnis. Fugit eos
-                        ratione reiciendis?</p>
-                </div>
-            </div>
         </div>
-    </center>
+        <div class="content">
+            <div class="row">
+                <div class="box">
+                    <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                    <h4>Project Name</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
 
+
+                </div>
+                <div class="box">
+                    <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                    <h4>Project Name</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+                </div>
+                <div class="box">
+                    <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                    <h4>Project Name</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+                </div>
+            
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+            <div class="box">
+                <img src="https://via.placeholder.com/350X200.png" alt="" srcset="">
+                <h4>Project Name</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, officia.</p>
+
+
+            </div>
+
+
+
+            <div class="footer">
+                <p>Copyright © Your Website 2014</p>
+            </div>
+</div>
+        </div>
+    </div>
 </body>
 
 </html>
